Creazione principali blocchi senza contenuto.

--- a/index.html
+++ b/index.html
@@ -9,25 +9,82 @@
     <main>
 
      <!-- header -->
+      <header>
+
+      </header>
 
 
 
      <!-- corpo principale -->
-
-     
+     <div class="generale">
 
      <!-- blocco a 3 colonne -->
 
+     <div class="threerow">
+
+       <div class="bloccotitle">
+
+       </div>
+
+        <div class="colonna">
+
+       </div>
+
+       <div class="colonna">
+
+       </div>
+
+       <div class="colonna">
+
+       </div>
+     </div>
+
      <!-- blocco a 2 colonne -->
 
+     <div class="tworow">
+
+       <div class="colonnadue">
+
+       </div>
+
+       <div class="colonnadue">
+
+       </div>
+
+     </div>
+
+     <!-- blocco simile al header -->
+
+     <div class="similetitle">
+
+       <div class="rowblue">
+
+       </div>
+
+       <div class="rowblue">
+
+       </div>
+
+     </div>
+
      <!-- blocco ad una colonna -->
+     <div class="onerow">
+
+       <div class="unica">
+
+       </div>
+
+     </div>
 
 
-
+     </div>
      <!-- chiusura corpo principale -->
 
 
      <!-- footer -->
+     <footer>
+
+     </footer>
 
     </main>
 
