--- a/index.html
+++ b/index.html
@@ -10,6 +10,37 @@
 
      <!-- header -->
       <header>
+        <div class="navtop">
+          <div class="navsx">
+          <img src="immagini/logo.png" alt="logo"class="logo">
+
+            <ul>
+              <li><a href="www.google.it" class="navmenu">il metodo</a></li>
+              <li><a href="www.google.it" class="navmenu">la tecnologia</a></li>
+              <li><a href="www.google.it" class="navmenu">real-life english</a></li>
+              <li><a href="www.google.it" class="navmenu">soluzioni aziendali</a></li>
+            </ul>
+          </div>
+          <div class="navdx">
+            <a href="www.google.it" class="navmenu">diventa un tutor</a>
+            <button type="login" name="login" class="login">login</button>
+            <a href="www.google.it" class="navmenu struttura">struttura un piano</a>
+          </div>
+
+        </div>
+
+        <div class="navbottom">
+          <div class="text">
+            <section id="textheader">
+              <h1>Scegli l'inglese studiato per i professionisti</h1>
+              <a href="www.google.it" class="navmenu struttura bottom">struttura un piano</a>
+            </section>
+          </div>
+          <div class="image">
+            <img src="immagini/uomini.png" alt="uomini"class="uomini">
+          </div>
+
+        </div>
 
       </header>
 
