inizio sezione a tre colonne

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
           <div class="image">
             <img src="immagini/uomini.png" alt="uomini"class="uomini">
           </div>
-
         </div>
 
       </header>
@@ -54,11 +53,15 @@
      <div class="threerow">
 
        <div class="bloccotitle">
-
+         <p class="titolo3colonne">Le scuole di lingua tradizionali non sono efficaci</p>
+         <p class="text3colonne">Solo un corso incentrato sulla Fluency poò portare ad una soluzione concreta</p>
        </div>
 
         <div class="colonna">
-
+          <img src="immagini/testa.png" alt="logo" class="loghi">
+          <h3>Piano formativo configurato sul proprio livello</h3>
+          <hr>
+          <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
        </div>
 
        <div class="colonna">
